--- a/access-beta.html
+++ b/access-beta.html
@@ -8,13 +8,11 @@
     <style>
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
             margin: 0;
             padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            background-color: #f4f4f4;
+            color: #333;
+            transition: background-color 0.3s ease, color 0.3s ease;
         }
  
         /* Topbar */
@@ -22,241 +20,193 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            width: 100%;
             background-color: #0056b3;
-            padding: 15px 20px;
-            border-radius: 12px;
             color: white;
+            padding: 15px;
+            border-bottom: 1px solid #ccc;
         }
  
-        .topbar .title {
-            font-size: 1.5rem;
-            font-weight: 600;
-            margin: 0 auto;
-        }
- 
-        .topbar .button {
-            background-color: #007bff;
-            color: white;
-            border: none;
+        .topbar input {
+            width: 400px;
+            padding: 10px;
             border-radius: 8px;
-            padding: 10px 20px;
-            cursor: pointer;
-            font-size: 1rem;
-            margin-left: 15px;
-        }
- 
-        .topbar .button:hover {
-            background-color: #004a85;
-        }
- 
-        .logout-btn {
-            background-color: #ff3b30;
-            color: white;
             border: none;
-            border-radius: 8px;
-            padding: 10px 20px;
-            cursor: pointer;
-            margin-left: 15px;
+            margin-right: 10px;
         }
  
-        .logout-btn:hover {
-            background-color: #c1271b;
-        }
- 
-        /* Popup Style */
-        #popup-bg, #popup {
-            display: none;
-        }
- 
-        #popup-bg {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            z-index: 999;
-        }
- 
-        #popup {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%) scale(0);
-            background-color: white;
-            border-radius: 15px;
-            padding: 30px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-            z-index: 1000;
-            text-align: center;
-            width: 300px;
-            transition: transform 0.4s ease;
-        }
- 
-        #popup h3 {
-            margin-bottom: 20px;
-            font-size: 1.2rem;
-            font-weight: 600;
-        }
- 
-        #popup button {
+        .topbar button {
             padding: 10px 20px;
             background-color: #007bff;
             color: white;
             border: none;
             border-radius: 8px;
             cursor: pointer;
-            font-size: 1rem;
+            transition: background-color 0.3s;
         }
  
-        #popup button:hover {
+        .topbar button:hover {
             background-color: #004a85;
         }
  
-        /* Search bar with Go button */
-        .search-bar-container {
+        /* Bookmarks Section */
+        .bookmarks {
+            padding: 20px;
+            background-color: #f4f4f4;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
-            margin-top: 40px;
         }
  
-        input[type="text"] {
-            width: 300px;
-            padding: 12px;
-            border: 1px solid #ccc;
-            border-radius: 8px 0 0 8px;
-            font-size: 1rem;
-            outline: none;
-            transition: 0.3s;
+        .bookmarks ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
         }
  
-        input[type="text"]:focus {
-            border-color: #007bff;
-            box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+        .bookmarks ul li {
+            margin-right: 10px;
         }
  
-        .go-button {
-            padding: 12px 20px;
+        .bookmarks ul li a {
+            text-decoration: none;
+            padding: 8px 12px;
             background-color: #007bff;
             color: white;
-            border: none;
-            border-radius: 0 8px 8px 0;
+            border-radius: 8px;
+            transition: background-color 0.3s;
+        }
+ 
+        .bookmarks ul li a:hover {
+            background-color: #0056b3;
+        }
+ 
+        /* Animations for Light and Dark Mode */
+        .toggle-dark-mode {
+            padding: 10px 20px;
             cursor: pointer;
-            font-size: 1rem;
-            transition: 0.3s;
+            background-color: #333;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            transition: background-color 0.3s;
         }
  
-        .go-button:hover {
-            background-color: #004a85;
+        .toggle-dark-mode:hover {
+            background-color: #111;
         }
  
-        /* MacOS-like Animation */
-        .macos-anim {
-            animation: popupAnim 0.4s forwards ease;
+        /* Search Results */
+        .search-results {
+            margin: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
         }
  
-        @keyframes popupAnim {
-            from {
-                transform: translate(-50%, -50%) scale(0);
-            }
-            to {
-                transform: translate(-50%, -50%) scale(1);
-            }
+        /* Dark Mode Styling */
+        body.dark {
+            background-color: #333;
+            color: white;
         }
  
-        /* Footer Version */
-        .footer-version {
-            margin-top: 40px;
-            font-size: 0.9rem;
-            color: #999;
+        body.dark .topbar {
+            background-color: #222;
+        }
+ 
+        body.dark .bookmarks {
+            background-color: #444;
+        }
+ 
+        body.dark .topbar button,
+        body.dark .toggle-dark-mode {
+            background-color: #888;
+        }
+ 
+        body.dark .topbar input {
+            background-color: #555;
+            color: white;
         }
     </style>
 </head>
 <body>
- 
     <!-- Topbar -->
     <div class="topbar">
-        <a href="signup.html" class="button">Login</a>
-        <span class="title">Access Beta</span>
-        <button class="logout-btn" onclick="logout()">Logout</button>
+        <input type="text" id="url-input" placeholder="Enter URL or Search">
+        <button onclick="searchOrOpen()">Go</button>
+        <button class="toggle-dark-mode" onclick="toggleDarkMode()">Dark Mode</button>
     </div>
  
-    <!-- Search Bar -->
-    <div class="search-bar-container">
-        <input type="text" id="url-input" placeholder="Enter URL">
-        <button class="go-button" onclick="openUrl()">Go</button>
+    <!-- Bookmarks -->
+    <div class="bookmarks">
+        <ul id="bookmarks-list">
+            <!-- Dynamic bookmarks will be added here -->
+        </ul>
+        <button onclick="addBookmark()">Add Bookmark</button>
     </div>
  
-    <!-- Popups for Beta and XFrame -->
-    <div id="popup-bg"></div>
-    <div id="popup">
-        <h3 id="popup-message">You cannot access this page.</h3>
-        <button onclick="closePopup()">OK</button>
+    <!-- Search Results Section -->
+    <div class="search-results" id="search-results">
+        <!-- Dynamic search results or opened URLs will be displayed here -->
     </div>
- 
-    <!-- Footer Version -->
-    <div class="footer-version">v2024.9</div>
  
     <script>
-        // Handle search bar and opening URL in new tab
-        function openUrl() {
-            const urlInput = document.getElementById('url-input').value;
-            let formattedUrl;
+        // Local storage for bookmarks
+        const bookmarks = JSON.parse(localStorage.getItem('bookmarks')) || [];
  
-            if (!urlInput.startsWith('https://')) {
-                formattedUrl = 'https://' + urlInput;
-            } else {
-                formattedUrl = urlInput;
+        function addBookmark() {
+            const url = document.getElementById('url-input').value;
+            if (url) {
+                bookmarks.push(url);
+                localStorage.setItem('bookmarks', JSON.stringify(bookmarks));
+                renderBookmarks();
             }
- 
-            window.open(formattedUrl, '_blank');
         }
  
-        // Show popup when Beta is clicked
-        function showPopup(message) {
-            const popup = document.getElementById('popup');
-            const popupBg = document.getElementById('popup-bg');
-            const popupMessage = document.getElementById('popup-message');
- 
-            popupMessage.textContent = message;
-            popup.classList.add('macos-anim');
-            popup.style.display = 'block';
-            popupBg.style.display = 'block';
+        function renderBookmarks() {
+            const bookmarksList = document.getElementById('bookmarks-list');
+            bookmarksList.innerHTML = '';
+            bookmarks.forEach(bookmark => {
+                const li = document.createElement('li');
+                const a = document.createElement('a');
+                a.href = bookmark;
+                a.textContent = bookmark;
+                a.target = '_blank';
+                li.appendChild(a);
+                bookmarksList.appendChild(li);
+            });
         }
  
-        // Close popup
-        function closePopup() {
-            const popup = document.getElementById('popup');
-            const popupBg = document.getElementById('popup-bg');
+        // Render bookmarks on page load
+        window.onload = renderBookmarks;
  
-            popup.style.display = 'none';
-            popupBg.style.display = 'none';
+        // Toggle between light and dark modes
+        function toggleDarkMode() {
+            document.body.classList.toggle('dark');
         }
  
-        // Logout functionality
-        function logout() {
-            localStorage.removeItem('loggedInUser');
-            window.location.href = 'signup.html';
+        // Search or open URL
+        function searchOrOpen() {
+            const input = document.getElementById('url-input').value;
+            const searchResults = document.getElementById('search-results');
+            searchResults.innerHTML = ''; // Clear previous results
+ 
+            if (input.includes('.') && !input.includes(' ')) {
+                // Assume it's a URL and open in a new tab
+                let formattedUrl = input.startsWith('http') ? input : 'https://' + input;
+                window.open(formattedUrl, '_blank');
+            } else {
+                // Simulate a search result in the A3X search engine
+                const simulatedResults = `
+                    <p>Search results for "${input}" (Powered by A3X Engine):</p>
+                    <ul>
+                        <li><a href="#">Result 1: ${input} on A3X</a></li>
+                        <li><a href="#">Result 2: ${input} on A3X</a></li>
+                        <li><a href="#">Result 3: ${input} on A3X</a></li>
+                    </ul>
+                `;
+                searchResults.innerHTML = simulatedResults;
+            }
         }
- 
-        // Beta button (simulating popup and fake loading)
-        function showBetaPopup() {
-            showPopup('You cannot access this page.');
- 
-            setTimeout(() => {
-                document.getElementById('popup-message').textContent = 'Loading assets...';
-                setTimeout(() => {
-                    closePopup();
-                }, 7000);
-            }, 1000);
-        }
- 
-        // Add event listeners for Beta button (add wherever necessary)
-        document.querySelector('.button-beta').addEventListener('click', showBetaPopup);
- 
     </script>
- 
 </body>
 </html>
