--- a/access-beta.html
+++ b/access-beta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Access Beta</title>
+    <title>A3X Browser</title>
     <link rel="stylesheet" href="axStyles.css">
     <script src="A3X.js" defer></script>
 </head>
@@ -12,6 +12,7 @@
     <div class="topbar">
         <button id="home-button">Home</button>
         <button id="general-button">General</button>
+        <button id="darkmode-toggle">Dark Mode</button>
         <div class="search-container">
             <input type="text" id="search-bar" placeholder="Search or enter a URL">
             <button id="search-button">Go</button>
