--- a/access-beta.html
+++ b/access-beta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Access Beta</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="axStyles.css">
 </head>
 <body>
     <div class="topbar">
@@ -20,6 +20,6 @@
     <div id="main-content"></div>
 
     <!-- JavaScript -->
-    <script src="script.js"></script>
+    <script src="A3X.js"></script>
 </body>
 </html>
